--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,6 @@ project:
   resources: 
     lectureslides.pdf
 
-
-
 book:
   title: "MA32011"
   author: "Philip Murray"
@@ -14,9 +12,7 @@ book:
   downloads: pdf
   repo-actions: [issue]
   cover-image: MA32011Cover.png
-
-
-  
+ 
   chapters:
     - index.qmd
     - intro.qmd
@@ -48,7 +44,7 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
-    code-fold: true
+    code-fold: false
   pdf:
     documentclass: scrreprt
     echo: false
@@ -64,6 +60,7 @@ format:
 filters:
   - shinylive
   - custom-numbered-blocks
+
 
 custom-numbered-blocks:
   groups:
