--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,17 +21,17 @@ book:
        - 1DFlows.qmd
        - Bifurcations.qmd
        #- FlowsOnCircle.qmd   
-    #- part: "2D flows"
-      #chapters:
-       #- 2DLinearSystems.qmd 
-       #- 2DNonLinearPhasePlane.qmd 
-       #- LimitCycles.qmd
-       #- 2DBifurcations.qmd
+    - part: "2D flows"
+      chapters:
+       - 2DLinearSystems.qmd 
+       - 2DNonLinearPhasePlane.qmd 
+       - LimitCycles.qmd
+       - 2DBifurcations.qmd
 
-    #- part: "Chaotic dynamics"
-    #  chapters:
-    #   - IterativeMaps.qmd 
-    #   - Lorenz.qmd
+    - part: "Chaotic dynamics"
+      #chapters:
+       #- IterativeMaps.qmd 
+       #- Lorenz.qmd
       
 
 
