--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,9 +24,9 @@ book:
     - part: "2D flows"
       chapters:
        - 2DLinearSystems.qmd 
-       - 2DNonLinearPhasePlane.qmd 
-       - LimitCycles.qmd
-       - 2DBifurcations.qmd
+       #- 2DNonLinearPhasePlane.qmd 
+       #- LimitCycles.qmd
+       #- 2DBifurcations.qmd
 
     - part: "Chaotic dynamics"
       #chapters:
