--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,14 +21,14 @@ book:
        - 1DFlows.qmd
        - Bifurcations.qmd
        #- FlowsOnCircle.qmd   
-    #- part: "2D flows"
-      #chapters:
-       #- 2DLinearSystems.qmd 
+    - part: "2D flows"
+      chapters:
+       - 2DLinearSystems.qmd 
        #- 2DNonLinearPhasePlane.qmd 
        #- LimitCycles.qmd
        #- 2DBifurcations.qmd
 
-    - part: "Chaotic dynamics"
+    #- part: "Chaotic dynamics"
       #chapters:
        #- IterativeMaps.qmd 
        #- Lorenz.qmd
