--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,9 +25,9 @@ book:
        - 1DFlows.qmd
        - Bifurcations.qmd
        #- FlowsOnCircle.qmd   
-    #- part: "2D flows"
-      #chapters:
-       #- 2DLinearSystems.qmd 
+    - part: "2D flows"
+      chapters:
+       - 2DLinearSystems.qmd 
        #- 2DNonLinearPhasePlane.qmd 
        #- LimitCycles.qmd
        #- 2DBifurcations.qmd
